--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ sanfran/pdf/*.jpg
 *.xcf
 *.shp
 toronto/register_google.R
-inspiration_board.svg
-inspiration_board_2.svg
+inspiration_board*.*
+inspiration_board*.*
